JT-4606 clean up spacing / styles more. fix too much margin applied to nearby school button bar

--- a/app/assets/stylesheets/school_profiles/_school_profile.scss
+++ b/app/assets/stylesheets/school_profiles/_school_profile.scss
@@ -1,7 +1,7 @@
 $space-between-profile-modules: $spacing-extra-large;
 
 .school-profile {
-  .content > div, .profile-section {
+  .static-container > .content > div, .profile-section {
     margin-top: $space-between-profile-modules;
   }
 
